@@ -332,35 +332,44 @@ local function Display(parent)
 	txt = QuickText(parent, "If you leave town, the Companion should update and tell you to go back to town.\r\rIf you leave town, go to any other step than Tanaris and then enter town again, it should automatically select the correct step for you.\r\r"
 	    .."You don't have to test at Gadgetzan, you can test any step with any item needed on release.", "GameFontNormal", "TOPLEFT", txt, "BOTTOMLEFT", 0, -1, clrText)
 
-	txt = QuickText(parent, "Simple 'Manual Mail Help' Usage", "GameFontNormalLarge", "TOPLEFT", txt, "BOTTOMLEFT", 0, -22, clrHeader)
+	txt = QuickText(parent, "Manual Mail Help", "GameFontNormalLarge", "TOPLEFT", txt, "BOTTOMLEFT", 0, -22, clrHeader)
 	txt = QuickText(parent, "Instead of relying on this addon to loot every item from every mail on release, when the servers are known to... struggle...\r"
-    .."You can instead use the companion to help organize your mails now, and then manually loot them.\rThis is just for the mailbox, the bank should™ work fine.", "GameFontNormal", "TOPLEFT", txt, "BOTTOMLEFT", 0, -1, clrWarn)
+        .."You can instead use the companion to help organize your mails now, and then manually loot them.\rThis is just for the mailbox, the bank should™ work fine.\r"
+        .."This is how we are using the companion ourselves.", "GameFontNormal", "TOPLEFT", txt, "BOTTOMLEFT", 0, -1, clrWarn)
 
 	txt = QuickText(parent, "Step 1", "GameFontNormal", "TOPLEFT", txt, "BOTTOMLEFT", 0, -9, clrStep)
 	txt = QuickText(parent, "Make sure you are done prepping, and you have all your BoE items ready.", "GameFontNormal", "TOPLEFT", txt, "BOTTOMLEFT", 0, -1, clrText)
 	txt = QuickText(parent, "Step 2", "GameFontNormal", "TOPLEFT", txt, "BOTTOMLEFT", 0, -9, clrStep)
 	txt = QuickText(parent, "Send all your prep items to an alt,  make sure all the items are on this alt, and ideally the alt has no other mail, so you don't need to search.", "GameFontNormal", "TOPLEFT", txt, "BOTTOMLEFT", 0, -1, clrText)
 	txt = QuickText(parent, "Step 3", "GameFontNormal", "TOPLEFT", txt, "BOTTOMLEFT", 0, -9, clrStep)
-	txt = QuickText(parent, "On the alt, send all the items to your main, either by sending new mails, or returning the mails you sent. The order doesn't matter, just send them all!", "GameFontNormal", "TOPLEFT", txt, "BOTTOMLEFT", 0, -1, clrText)
+	txt = QuickText(parent, "On the alt, send all the items back to your main, either by sending new mails, or returning the mails you sent.", "GameFontNormal", "TOPLEFT", txt, "BOTTOMLEFT", 0, -1, clrText)
 	txt = QuickText(parent, "Step 4", "GameFontNormal", "TOPLEFT", txt, "BOTTOMLEFT", 0, -9, clrStep)
-	txt = QuickText(parent, "Log back on your main, now it should have several mails with items. Make sure your bags are clean and have enough room.\rOpen the companion and go to step 2 in the companion.", "GameFontNormal", "TOPLEFT", txt, "BOTTOMLEFT", 0, -1, clrText)
-	txt = QuickText(parent, "Step 5", "GameFontNormal", "TOPLEFT", txt, "BOTTOMLEFT", 0, -9, clrStep)
-	txt = QuickText(parent, "Interact with any mailbox, and click 'Collect'. Now all items will be collected for this step. Close the mailbox when it's done.\nIf it didn't collect all items, try clicking collect again. If you're missing items, get them.\r"
-    .."Make sure the itemlist for this step is empty, so you have them all in your bags.", "GameFontNormal", "TOPLEFT", txt, "BOTTOMLEFT", 0, -1, clrText)
-	txt = QuickText(parent, "Step 6", "GameFontNormal", "TOPLEFT", txt, "BOTTOMLEFT", 0, -9, clrStep)
-	txt = QuickText(parent, "Once you have all items from this step in your bags, send a new mail to your alt, and name it something useful, like 'Silithus1', 'Silithus2'.", "GameFontNormal", "TOPLEFT", txt, "BOTTOMLEFT", 0, -1, clrText)
+	txt = QuickText(parent, "Log back on your main, now it should have several mails with items.\rYou could leave it like this, if you want to rely on the companion collect on release.", "GameFontNormal", "TOPLEFT", txt, "BOTTOMLEFT", 0, -1, clrText)
+    txt = QuickText(parent, "Step 5", "GameFontNormal", "TOPLEFT", txt, "BOTTOMLEFT", 0, -9, clrStep)
+	txt = QuickText(parent, "If you want to continue with this manual way, make sure your bags are clean and have enough room.", "GameFontNormal", "TOPLEFT", txt, "BOTTOMLEFT", 0, -1, clrText)
+    txt = QuickText(parent, "Step 6", "GameFontNormal", "TOPLEFT", txt, "BOTTOMLEFT", 0, -9, clrStep)
+	txt = QuickText(parent, "Type '/tbc resetmarkeditems' to reset where your items are stored.", "GameFontNormal", "TOPLEFT", txt, "BOTTOMLEFT", 0, -1, clrText)
     txt = QuickText(parent, "Step 7", "GameFontNormal", "TOPLEFT", txt, "BOTTOMLEFT", 0, -9, clrStep)
-	txt = QuickText(parent, "Now go to 'Step 3' in the companion and do the same - use collect button to get them, check you have all items, send them back to alt with a good name, maybe Gadgetzan1, Gadgetzan2 for step3.", "GameFontNormal", "TOPLEFT", txt, "BOTTOMLEFT", 0, -1, clrText)
+	txt = QuickText(parent, "Open the TBCPrep Companion and go to step 2/x.", "GameFontNormal", "TOPLEFT", txt, "BOTTOMLEFT", 0, -1, clrText)
     txt = QuickText(parent, "Step 8", "GameFontNormal", "TOPLEFT", txt, "BOTTOMLEFT", 0, -9, clrStep)
-	txt = QuickText(parent, "Continue this for all steps. At the end, your alt should have nicely named mails with all your items, that you can open yourself with shift+rightclick on release.", "GameFontNormal", "TOPLEFT", txt, "BOTTOMLEFT", 0, -1, clrText)
-    txt = QuickText(parent, "Step 9", "GameFontNormal", "TOPLEFT", txt, "BOTTOMLEFT", 0, -9, clrStep)
-	txt = QuickText(parent, "Log on to the alt, and return these nicely named mails in reverse order. So you want to return the 'Stonard' mail first.\rIf you do this, the mail you need first, will appear first in your mailbox.", "GameFontNormal", "TOPLEFT", txt, "BOTTOMLEFT", 0, -1, clrText)
+	txt = QuickText(parent, "Interact with any mailbox, and click 'Collect'. Now all items will be collected for this step. Close the mailbox when it's done.\nIf it didn't collect all items, try again. If you're missing items, get them.\r"
+        .."Make sure the companions itemlist for this step is empty, so you have them all in your bags.", "GameFontNormal", "TOPLEFT", txt, "BOTTOMLEFT", 0, -1, clrText)
+	txt = QuickText(parent, "Step 9", "GameFontNormal", "TOPLEFT", txt, "BOTTOMLEFT", 0, -9, clrStep)
+	txt = QuickText(parent, "Once you have all items from this step in your bags, prepare a new mail to send to your alt, and name it something useful, like 'Silithus1', 'Silithus2'.\rAttach up to 12 items.", "GameFontNormal", "TOPLEFT", txt, "BOTTOMLEFT", 0, -1, clrText)
     txt = QuickText(parent, "Step 10", "GameFontNormal", "TOPLEFT", txt, "BOTTOMLEFT", 0, -9, clrStep)
+	txt = QuickText(parent, "Open /tbc and go to the items Tab.\rMark the items you are about to send as being stored by rightclicking on them. I use 'Mailbox'.", "GameFontNormal", "TOPLEFT", txt, "BOTTOMLEFT", 0, -1, clrText)
+    txt = QuickText(parent, "Step 11", "GameFontNormal", "TOPLEFT", txt, "BOTTOMLEFT", 0, -9, clrStep)
+	txt = QuickText(parent, "Now go to 'Step 3' in the companion and do the same. Use the collect button to get them, check you have all items and send them back to alt with a good name, maybe Gadgetzan1, Gadgetzan2 for step3.", "GameFontNormal", "TOPLEFT", txt, "BOTTOMLEFT", 0, -1, clrText)
+    txt = QuickText(parent, "Step 12", "GameFontNormal", "TOPLEFT", txt, "BOTTOMLEFT", 0, -9, clrStep)
+	txt = QuickText(parent, "Continue this for all steps. At the end, your alt should have nicely named mails with all your items.", "GameFontNormal", "TOPLEFT", txt, "BOTTOMLEFT", 0, -1, clrText)
+    txt = QuickText(parent, "Step 13", "GameFontNormal", "TOPLEFT", txt, "BOTTOMLEFT", 0, -9, clrStep)
+	txt = QuickText(parent, "Log on to the alt, and return these nicely named mails in reverse order. So you want to return the 'Stonard' mail first.\rIf you do this, the mail you need first, will appear first in your mailbox.", "GameFontNormal", "TOPLEFT", txt, "BOTTOMLEFT", 0, -1, clrText)
+    txt = QuickText(parent, "Step 14", "GameFontNormal", "TOPLEFT", txt, "BOTTOMLEFT", 0, -9, clrStep)
 	txt = QuickText(parent, "Now you can manually loot the mails you need on release. You should still have the companion open to help loot bank items, and to remember when to loot stuff, but you don't rely on our addon looping through mails on release, where the server might be lagging badly.", "GameFontNormal", "TOPLEFT", txt, "BOTTOMLEFT", 0, -1, clrText)
 
 	txt = QuickText(parent, "Feedback", "GameFontNormalLarge", "TOPLEFT", txt, "BOTTOMLEFT", 0, -28, clrHeader)
 	txt = QuickText(parent, "If you find something here confusing, or find any errors, please let us know on Discord.", "GameFontNormal", "TOPLEFT", txt, "BOTTOMLEFT", 0, -1, clrText)
-	txt = QuickText(parent, "Discord Invite: Click the discord link in the /tbcprep 'About' tab, you can copy it :)", "GameFontNormalSmall", "TOPLEFT", txt, "BOTTOMLEFT", 0, -1, clrWarn)
+	txt = QuickText(parent, "Discord Invite: Click the discord link in the /tbcprep 'About' tab, you can copy it :)\r", "GameFontNormalSmall", "TOPLEFT", txt, "BOTTOMLEFT", 0, -1, clrWarn)
 
 	parent:SetSize(parent:GetWidth(), 1)
 end
